k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myfrontend-2
  labels:
    name: myfrontend
spec:
  containers:
  - name: myfrontend
    image: susguzman/so1-s223-front:0.1.3-nginx-alpine
    resources:
      limits:
        memory: "128Mi"
        cpu: "200m"
    ports:
      - containerPort: 80
