k8s/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-svc
spec:
  type: ClusterIP # Private Service
  selector:
    app: database
  ports:
  - port: 1521
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      volumes:
      - name: init-script
        configMap:
          name: database-cm
      - name: db-data
        persistentVolumeClaim:
          claimName: database-pv-claim
      containers:
      - name: database
        image: gvenzl/oracle-xe:21.3.0
        resources:
          limits:
            memory: "3Gi"
            cpu: "2000m" # 2 CPU
        ports:
        - containerPort: 1521
        volumeMounts:
        - name: init-script
          mountPath: /container-entrypoint-initdb.d
        - name: db-data
          mountPath: /opt/oracle/oradata
