k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budget-ingress
spec:
  rules:
  - host: "budget.poguz.xyz"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
  - host: "back.poguz.xyz"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80
